--- a/parth.html
+++ b/parth.html
@@ -48,12 +48,12 @@
     }
 </style>
 
-<body background="C:\Users\Dell\Downloads\New folder\p1.jpg">
+<body background="p1.jpg">
     <center>
         <div class="yo">
             <div class="font">
                 <h1><b>Shivani Pal</b></h1>
-                <img src=" C:\Users\Dell\Downloads\New folder\capmav.jpg" style="width: 205px" height="215px"
+                <img src=" capmav.jpg" style="width: 205px" height="215px"
                     alt="cap mav"><br>
 
                 <b> Email:</b>shivani14306@gmail.com |<b>Phone No.:</b>8839873369 | <b>My Github URL:</b><a
